--- a/build.gradle
+++ b/build.gradle
@@ -29,19 +29,19 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.3.1'
+    implementation group: 'com.querydsl', name: 'querydsl-core', version: '4.3.1'
+    implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.1.3'
+
     compile('org.springframework.boot:spring-boot-starter-web')
     annotationProcessor("org.projectlombok:lombok")
     compileOnly("org.projectlombok:lombok")
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    //compile('com.h2database:h2')
     compile 'mysql:mysql-connector-java'
-    //compile('org.springframework.session:spring-session-jdbc')
-    //compile('org.mariadb.jdbc:mariadb-java-client')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     /* JSONParser, JSONObject설정 */
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    implementation 'com.querydsl:querydsl-jpa'
 
 }
 
