--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,11 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.3.1'
-    implementation group: 'com.querydsl', name: 'querydsl-core', version: '4.3.1'
+    //implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.3.1'
+    //implementation group: 'com.querydsl', name: 'querydsl-core', version: '4.3.1'
+    //implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.1.3'
+    implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.4.0'
+    implementation group: 'com.querydsl', name: 'querydsl-core', version: '4.4.0'
     implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.1.3'
 
     compile('org.springframework.boot:spring-boot-starter-web')
