--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ sourceCompatibility = 11
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -35,6 +36,8 @@ dependencies {
     implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.4.0'
     implementation group: 'com.querydsl', name: 'querydsl-core', version: '4.4.0'
     implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.1.3'
+    implementation 'com.github.shin285:KOMORAN:3.3.4'
+
 
     compile('org.springframework.boot:spring-boot-starter-web')
     annotationProcessor("org.projectlombok:lombok")
